--- a/css/creative.css
+++ b/css/creative.css
@@ -4,7 +4,8 @@ html {
   width: 100%;
   height: 100%;
 }
-
+@media (min-width: 320px) and (max-width: 480px) {
+  
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
@@ -315,3 +316,4 @@ header.masthead p {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
 
+}
